Import of MELONMAN/xcruciate-unitconfig-003 from CPAN.
gitpan-cpan-distribution: xcruciate-unitconfig
gitpan-cpan-version:      003
gitpan-cpan-path:         MELONMAN/xcruciate-unitconfig-003.tgz
gitpan-cpan-author:       MELONMAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,1 @@
-Revision history for Perl extension Xcruciate::UnitConfig.
-
-0.01  Sat Jan 10 18:32:00 2009
-	- original version; created by h2xs 1.23 with options
-		-X -n Xcruciate::UnitConfig
-
+Run pod2text (or something) on the module to view the change log.
